[package]
name = "wattcoin_core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
sha2 = "0.10"
ed25519-dalek = "2.0"
rand = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # Pour transformer nos blocs en texte pour le réseau
tokio = { version = "1.41", features = ["full"] } # Le moteur réseau asynchrone
bip39 = { version = "2.2.2", features = ["french"] }
